fix: section title

--- a/_includes/sections/products.html
+++ b/_includes/sections/products.html
@@ -3,10 +3,10 @@
   <div class="container">
 
     <!-- Products Header Page Title -->
-    <h2 class="products-section__title">{{ page.title }}</h2>
+    <h2 class="site-section__title">{{ page.title }}</h2>
 
     <!-- Products Header Page Description -->
-    <h3 class="products-section__description">{{ page.description }}</h3>
+    <h3 class="site-section__description">{{ page.description }}</h3>
 
 
 
