--- a/_scss/layout/_solutions.scss
+++ b/_scss/layout/_solutions.scss
@@ -10,25 +10,8 @@ section.solutions-section {
   background-color: $white !important;
   padding: 10px 0 60px;
 
-  .solution-section__title {
-    font-size: $title-font-size-2;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    text-align: center;
-    color: $web-blue;
+  .site-section__title {
     margin-bottom: 100px;
-    font-weight: 400;
-
-    &:after {
-      content: '';
-      position: absolute;
-      width: 30%;
-      height: 1px;
-      bottom: -20px;
-      left: 35%;
-      background-color: $orange;
-    }
   }
 
   .solution-section__description {
