--- a/_includes/sections/products-pricing.html
+++ b/_includes/sections/products-pricing.html
@@ -3,7 +3,7 @@
   <div class="container">
 
     <!-- Products Pricing Page Title -->
-    <h2 class="products-section__title">{{ page.title }}</h2>
+    <h2 class="site-section__title">{{ page.title }}</h2>
 
 
     <!-- Products Pricing Cards (Desktop) -->
