--- a/_includes/sections/solutions.html
+++ b/_includes/sections/solutions.html
@@ -5,7 +5,7 @@
     <h3 class="solution-section__description">{{ page.description }}</h3>
 
     <!-- Solutions Page Title -->
-    <h2 class="solution-section__title">{{ page.title }}</h2>
+    <h2 class="site-section__title">{{ page.title }}</h2>
 
     <!-- Solutions -->
     <div
