feat: how it works

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -107,6 +107,7 @@
         "layout/_solutions",
         "layout/_solutions-download",
         "layout/_products",
+        "layout/_how-it-works",
         "layout/_parallax-features",
         "layout/_blog",
         "layout/_team",
