--- a/_scss/layout/_products.scss
+++ b/_scss/layout/_products.scss
@@ -97,6 +97,16 @@ section.products-pricing-section {
   background-color: $white !important;
   padding: 10px 0 60px;
 
+  .products-section__description {
+    margin: 0 auto 60px auto;
+    font-size: $title-font-size-1;
+    line-height: 1.5;
+    font-weight: 400;
+    color: $gray;
+    text-align: center;
+    max-width: 900px;
+  }
+
   .products-pricing__contact-us {
     display: flex;
     justify-content: center;
