--- a/css/style.css
+++ b/css/style.css
@@ -4653,6 +4653,16 @@ section.products-pricing-section {
   padding: 10px 0 60px;
 }
 
+section.products-pricing-section .products-section__description {
+  margin: 0 auto 60px auto;
+  font-size: 2rem;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #5c5d5f;
+  text-align: center;
+  max-width: 900px;
+}
+
 section.products-pricing-section .products-pricing__contact-us {
   display: -webkit-box;
   display: -webkit-flex;
@@ -4775,6 +4785,300 @@ section.products-pricing-section .pricing-table .row.plans .col-plan > .has-aste
   position: absolute;
   content: '*';
   right: -10px;
+}
+
+/**
+ *
+ *  How It Works Section Style
+ *
+ *  @package gleesik_layout
+ *
+ **/
+section.how-it-works-section {
+  background-color: #fff !important;
+  padding: 10px 0 60px;
+}
+
+section.how-it-works-section .container iframe {
+  width: 100%;
+  max-width: 800px;
+  height: 400px;
+}
+
+section.how-it-works-section .container .actions {
+  margin: 60px auto 0 auto;
+  text-align: center;
+}
+
+section.how-it-works-section .container .actions > a {
+  margin: 15px;
+}
+
+section.how-it-works-section--2 {
+  padding: 60px 0;
+}
+
+section.how-it-works-section--2 .container .title {
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 40px;
+}
+
+section.how-it-works-section--2 .container .title::after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 1px;
+  background-color: #f15d2f;
+  left: calc(50% - 25px);
+  bottom: -15px;
+}
+
+section.how-it-works-section--2 .container .description {
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+section.how-it-works-section--3 {
+  padding: 0;
+}
+
+section.how-it-works-section--3 .section-top-container {
+  padding: 60px 0 0 0;
+  background-color: #fff !important;
+  width: 100%;
+}
+
+section.how-it-works-section--3 .section-top-container .container {
+  border-top: 1px solid #f15d2f;
+  border-left: 1px solid #f15d2f;
+  border-right: 1px solid #f15d2f;
+  padding: 50px 0 20px;
+}
+
+section.how-it-works-section--3 .section-top-container .container .title {
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 40px;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--3 .section-top-container .container .title::after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 1px;
+  background-color: #f15d2f;
+  left: calc(50% - 25px);
+  bottom: -15px;
+}
+
+section.how-it-works-section--3 .section-top-container .container .description {
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: 0 auto 50px auto;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container {
+  position: relative;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container .item {
+  padding: 0 30px;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container .item-title-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container .item-title-wrapper img {
+  margin-right: 15px;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container .item-title {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container .item-description {
+  font-size: 1.2rem;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--3 .section-top-container .container .row > .item-container:first-child::after {
+  content: '';
+  position: absolute;
+  width: 1px;
+  height: 300px;
+  background-color: #f15d2f;
+  top: 60px;
+  right: 0;
+}
+
+section.how-it-works-section--3 .section-bottom-container {
+  padding: 0;
+  background-color: #2d3e50 !important;
+  color: #fff;
+  width: 100%;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container {
+  border-left: 1px solid #f15d2f;
+  border-right: 1px solid #f15d2f;
+  border-bottom: 1px solid #f15d2f;
+  padding: 70px 0 0 0;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container .item-container {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container .item-container .item {
+  padding: 0 30px;
+  margin-bottom: 60px;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container .item-container .item-title-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container .item-container .item-title-wrapper img {
+  margin-right: 15px;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container .item-container .item-title {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+}
+
+section.how-it-works-section--3 .section-bottom-container .container .item-container .item-description, section.how-it-works-section--3 .section-bottom-container .container .item-container .item-description > p {
+  font-size: 1.2rem;
+}
+
+section.how-it-works-section--3 .section-bottom-container .action {
+  text-align: center;
+  padding: 70px 0;
+}
+
+section.how-it-works-section--4 {
+  background-color: #fff !important;
+  padding: 80px 0;
+}
+
+section.how-it-works-section--4 .container .title {
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 50px;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--4 .container .title::after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 1px;
+  background-color: #f15d2f;
+  left: calc(50% - 25px);
+  bottom: -15px;
+}
+
+section.how-it-works-section--4 .container .description {
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: 0 auto 50px auto;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--4 .container .row {
+  margin-bottom: 60px;
+}
+
+section.how-it-works-section--4 .container .row .number {
+  width: 25%;
+  color: #f15d2f;
+  text-align: center;
+  font-size: 9rem;
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+section.how-it-works-section--4 .container .row .item {
+  width: 75%;
+  border: 2px solid #f15d2f;
+  padding: 40px;
+  -webkit-box-ordinal-group: 3;
+  -webkit-order: 2;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+section.how-it-works-section--4 .container .row .item-title {
+  font-size: 1.3rem;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--4 .container .row .item-description {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #2d3e50;
+}
+
+section.how-it-works-section--4 .container .row:nth-child(even) .number {
+  -webkit-box-ordinal-group: 3;
+  -webkit-order: 2;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+section.how-it-works-section--4 .container .row:nth-child(even) .item {
+  -webkit-box-ordinal-group: 2;
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+section.how-it-works-section--4 .container .action {
+  text-align: center;
+  width: 100%;
 }
 
 /**
