--- a/_scss/layout/_hero.scss
+++ b/_scss/layout/_hero.scss
@@ -43,6 +43,7 @@ section.site-section.hero-section {
         .hero-description {
             margin-bottom: 80px;
             font-weight: 400;
+            font-size: $text-font-size-1;
         }
         .company-name {
             position: relative;
