--- a/_scss/layout/_sections.scss
+++ b/_scss/layout/_sections.scss
@@ -36,7 +36,7 @@
     font-size: $title-font-size-1;
     line-height: 1.5;
     font-weight: 400;
-    color: $dark-blue;
+    color: $gray;
     text-align: center;
   }
 
