--- a/_scss/modules/_color-skin.scss
+++ b/_scss/modules/_color-skin.scss
@@ -16,6 +16,7 @@ $black-blue: #161c2a;
 $gray: #5c5d5f;
 $web-gray: #f1f3f6;
 $web-blue: #2d3e50;
+$bg: #F1F3F6;
 
 // Theme Colors
 $blue: #F15C2E;
