--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,22 +1,68 @@
 <!-- About Section -->
-<section class="site-section about-section next-section-indicator" id="about">
+<section class="site-section about-section" id="about">
+
   <div class="container">
+    <!-- Products Header Page Title -->
+    <h2 class="site-section__title">{{ page.title }}</h2>
 
-    <!-- Section Heading -->
-    <div class="row">
+    <!-- Products Header Page Description -->
+    <h3 class="site-section__description">{{ page.description }}</h3>
 
-      <!-- Section Header -->
-      <header class="col-md-8 col-md-push-2 col-sm-12 section-header text-center">
-        <h2>{{ page.about-title }}</h2>
-        <hr class="normal">
-      </header>
-
-      <!-- Section Content -->
-      <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
-        <p>{{ page.about-description }}</p>
-      </div>
-
+    <div class="content-container">
+        {{ page.text }}
+        <div class="action">
+          <a class="button button--outline"> CONTACT US </a>
+        </div>
     </div>
-
   </div>
 </section>
+
+<!-- Team Section -->
+<section class="site-section team-section" id="team">
+  <div class="container">
+    <h3 class="site-section__title--small">
+      {{ page.team.title }}
+    </h3>
+    <p class="site-section__description--small">
+      {{ page.team.description }}
+    </p>
+
+    <div class="team-card">
+      {% for member in page.team.members %}
+        <div class="member-col">
+          <div class="member-picture">
+            <img src="{{ member.picture }}" />
+          </div>
+          <div class="member-name">
+            {{ member.name }}
+          </div>
+          <div class="member-position">
+            {{ member.role }}
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
+
+<!-- Story Sections -->
+<section class="site-section story-section" id="story">
+  <h3 class="section-title">Our Story</h3>
+  {% for story in page.stories %}
+    <div class="story story--{{ story.style-type }}">
+      <div class="container">
+        <h4 class="story__title">{{ story.title }}</h4>
+        <div class="story__content">
+          {{ story.description }}
+        </div>
+
+        {% if forloop.index == forloop.length - 1 %}
+          <div class="story__action">
+            <a href="" class="button button--outline">CONTACT US</a>
+          </div>
+        {% endif %}
+      </div>
+    </div>
+  {% endfor %}
+</section>
+
