--- a/_scss/layout/_about.scss
+++ b/_scss/layout/_about.scss
@@ -6,4 +6,179 @@
  *
  **/
 
-// Silence is golden.
+section.about-section {
+    background-color: $white;
+    padding: 10px 0 60px;
+    
+    .site-section__description {
+        max-width: 750px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .content-container {
+        max-width: 950px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: $bg;
+        padding: 50px 80px;
+        font-size: $text-font-size-1;
+        color: $web-blue;
+        line-height: 1.2;
+
+        .action {
+            width: 100%;
+            text-align: center;
+            margin-top: 50px;
+        }
+    }
+}
+
+// Team section
+section.team-section {
+    background-color: $web-blue;
+    color: $white;
+    padding: 50px 0 0 0;
+    min-height: 620px;
+
+    .site-section__title--small {
+        font-size: $title-font-size-1;
+        position: relative;
+        text-align: center;
+        margin-bottom: 40px;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 40px;
+            left: calc(50% - 20px);
+            height: 1px;
+            background-color: $orange;
+            bottom: -10px;
+        }
+    }
+    .site-section__description--small {
+        font-size: $text-font-size-1;
+        max-width: 750px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 50px;
+    }
+
+    .container {
+        position: relative;
+    }
+
+    .team-card {
+        position: absolute;
+        width: 100%;
+        padding: 50px 60px 50px 60px;
+        background-color: $white;
+        color: $web-blue;
+        border-radius: 5px;
+        display: flex;
+        z-index: 2;
+        .member-col {
+            width: 20%;
+            display: flex;
+            flex-direction: column;
+            padding: 10px 15px;
+
+            .member-picture {
+                border-radius: 50%;
+                overflow: hidden;
+                margin-bottom: 30px;
+            }
+            .member-name {
+                text-transform: uppercase;
+                font-size: $text-font-size-2;
+                text-align: center;
+                min-height: 60px;
+                line-height: 1.5;
+                color: $dark-blue;
+            }
+            .member-position {
+                font-size: 1rem;
+                text-align: center;
+                line-height: 1.2;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+            }
+        }
+    }
+}
+
+// Story section
+section.story-section {
+    padding: 100px 0 0;
+    background-color: $bg;
+
+    .section-title {
+        text-transform: uppercase;
+        color: $dark-blue;
+        text-align: center;
+        width: 100%;
+        font-size: $title-font-size-1;
+    }
+
+    .story {
+        padding: 70px 0;
+        &:nth-child(2) {
+            padding-top: 40px;
+        }
+        &:nth-child(4) {
+            padding-bottom: 10px;
+        }
+
+        &__title {
+            font-size: $text-font-size-2;
+            position: relative;
+            text-align: center;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+            font-weight: 400;
+            &::after {
+                content: '';
+                position: absolute;
+                width: 50px;
+                height: 1px;
+                background: $orange;
+                left: calc(50% - 25px);
+                bottom: -10px;
+                font-weight: 400;
+            }
+        }
+
+        &__content {
+            font-size: $text-font-size-1;
+            line-height: 1.5;
+            font-weight: 400;
+            max-width: 750px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        &__action {
+            width: 100%;
+            text-align: center;
+            margin-top: 60px;
+        }
+
+        &--gray {
+            background-color: $bg;
+            color: $dark-blue;
+        }
+
+        &--white {
+            background-color: $white;
+            color: $dark-blue;
+        }
+
+        &--dark {
+            background-color: $web-blue;
+            color: $white;
+        }
+
+    }
+}
+
