--- a/css/style.css
+++ b/css/style.css
@@ -3995,7 +3995,7 @@ code.highlighter-rouge {
   font-size: 2rem;
   line-height: 1.5;
   font-weight: 400;
-  color: #1f2739;
+  color: #5c5d5f;
   text-align: center;
 }
 
@@ -4283,6 +4283,7 @@ section.site-section.hero-section .container .row .hero-subtitle {
 section.site-section.hero-section .container .row .hero-description {
   margin-bottom: 80px;
   font-weight: 400;
+  font-size: 1.2rem;
 }
 
 section.site-section.hero-section .container .row .company-name {
@@ -4324,6 +4325,198 @@ section.site-section.hero-section .container .row .action-container .action-desc
  *  @package gleesik_layout
  *
  **/
+section.about-section {
+  background-color: #fff;
+  padding: 10px 0 60px;
+}
+
+section.about-section .site-section__description {
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section.about-section .content-container {
+  max-width: 950px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #F1F3F6;
+  padding: 50px 80px;
+  font-size: 1.2rem;
+  color: #2d3e50;
+  line-height: 1.2;
+}
+
+section.about-section .content-container .action {
+  width: 100%;
+  text-align: center;
+  margin-top: 50px;
+}
+
+section.team-section {
+  background-color: #2d3e50;
+  color: #fff;
+  padding: 50px 0 0 0;
+  min-height: 620px;
+}
+
+section.team-section .site-section__title--small {
+  font-size: 2rem;
+  position: relative;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+section.team-section .site-section__title--small::after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  left: calc(50% - 20px);
+  height: 1px;
+  background-color: #f15d2f;
+  bottom: -10px;
+}
+
+section.team-section .site-section__description--small {
+  font-size: 1.2rem;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
+
+section.team-section .container {
+  position: relative;
+}
+
+section.team-section .team-card {
+  position: absolute;
+  width: 100%;
+  padding: 50px 60px 50px 60px;
+  background-color: #fff;
+  color: #2d3e50;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 2;
+}
+
+section.team-section .team-card .member-col {
+  width: 20%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 10px 15px;
+}
+
+section.team-section .team-card .member-col .member-picture {
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+section.team-section .team-card .member-col .member-name {
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  text-align: center;
+  min-height: 60px;
+  line-height: 1.5;
+  color: #1f2739;
+}
+
+section.team-section .team-card .member-col .member-position {
+  font-size: 1rem;
+  text-align: center;
+  line-height: 1.2;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+section.story-section {
+  padding: 100px 0 0;
+  background-color: #F1F3F6;
+}
+
+section.story-section .section-title {
+  text-transform: uppercase;
+  color: #1f2739;
+  text-align: center;
+  width: 100%;
+  font-size: 2rem;
+}
+
+section.story-section .story {
+  padding: 70px 0;
+}
+
+section.story-section .story:nth-child(2) {
+  padding-top: 40px;
+}
+
+section.story-section .story:nth-child(4) {
+  padding-bottom: 10px;
+}
+
+section.story-section .story__title {
+  font-size: 1.3rem;
+  position: relative;
+  text-align: center;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+section.story-section .story__title::after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 1px;
+  background: #f15d2f;
+  left: calc(50% - 25px);
+  bottom: -10px;
+  font-weight: 400;
+}
+
+section.story-section .story__content {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  font-weight: 400;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section.story-section .story__action {
+  width: 100%;
+  text-align: center;
+  margin-top: 60px;
+}
+
+section.story-section .story--gray {
+  background-color: #F1F3F6;
+  color: #1f2739;
+}
+
+section.story-section .story--white {
+  background-color: #fff;
+  color: #1f2739;
+}
+
+section.story-section .story--dark {
+  background-color: #2d3e50;
+  color: #fff;
+}
+
 /**
  *
  *  Features Section Style
