--- a/_scss/layout/_download.scss
+++ b/_scss/layout/_download.scss
@@ -6,101 +6,174 @@
  *
  **/
 
- section.download-section {
-
-  .row > [class*="col-"] {
-    justify-content: stretch;
-  }
-
-  .button-cta {
-    display: none;
-    margin-bottom: 0.4em;
-  }
-
-  code {
-    white-space: nowrap;
-    border: 1px solid black;
-    border-radius: .4em;
-    background-color: #2e0a23;
-    color: lightgray;    
-    font-size: 0.8em;
-    display: inline-block;
-    overflow: auto;
-    width: 100%;
-    text-align: center;
-    padding: 1em .5em 1em .5em;
-    font-family: monospace;    
-  }
-
-  .row {
-    align-items: initial;
-    margin-bottom: 1em;
-  }
-
-  hr.small {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-
-  .download-header {
-    margin-bottom: 1em;
-    text-align: center;
-
-    .title {
-      font-size: 2em;
-      font-weight: bold;
+section.download-section {
+  padding: 0;
+  font-size: $text-font-size-1;
+  .download {
+    padding: 60px 0;
+    &:first-child {
+      background-color: $bg;
+      color: $dark-blue;
+    }
+    &:last-child {
+      background-color: $web-blue;
+      color: $white;
     }
 
-    p {
-      font-size: 1.5em;
-    }
-  }
+    &-title {
+      display: flex;
+      align-items: center;
 
-  counter-reset: boxes;
-
-  .download-box {
-    text-align: center;
-    height: 100%;
-    margin-bottom: 1em;
-
-    h4::before {
-      counter-increment: boxes;
-      content: counter(boxes);
-      padding: 3px 8px;
-      margin-right: .5em;
-      color: white;
-      font-weight: bold;
-      font-family: monospace;
-      background-color: $primary;
-      border: .1em solid $primary;
-      border-radius: 2em;      
-    }
-
-    .download-content {
-      padding: 1em 0.7em;
-      margin-top: 0;
-      border: 2px solid $light-gray;
-      height: inherit;
-
-      p {
-        margin: 1em 0;
+      h2 {
+        font-size: $title-font-size-2;
       }
-
-      .download-link {
-        font-size: 90%;
-        // font-weight: bold;
-        display: inline-block;
-        margin: 0.3em;
+      img {
+        margin-right: 15px;
       }
     }
-  }
-
-  .download-content {
-    padding: 0;
-    margin-top: 0;
-
-    p {
-      margin: 1em 0;
+    &-content {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
     }
+
+    &-description {
+      font-size: 1.9rem;
+      line-height: 1.5;
+      margin-bottom: 30px;
+    }
+
+    &__left {
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 170px;
+    }
+    &-action {
+      position: relative;
+      .button {
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+      .action-description {
+        position: absolute;
+        bottom: -1.8em;
+        font-size: .6em;
+      }
+    }
+    &-command {
+      margin-top: 50px;
+      margin-bottom: 60px;
+      .command-label {
+        font-size: $text-font-size-2;
+        font-weight: 400;
+        margin-bottom: 20px;
+      }
+      .download-action {
+        padding: 0 25px;
+        .button {
+          width: 100%;
+        }
+        .action-description {
+          width: calc(100% - 50px);
+          text-align: center;
+        }
+      }
+    }
+
+    hr.orange {
+      background-color: $orange;
+      margin-bottom: 50px;
+    }
+
+    .row {
+      align-items: flex-start;
+    }
+    .download-choices {
+      .choice {
+        background-color: $white;
+        color: $dark-blue;
+        border-radius: 4px;
+        padding: 20px;
+        min-height: 300px;
+
+        &-title {
+          display: flex;
+          align-items: center;
+          font-size: $text-font-size-2;
+          text-transform: uppercase;
+          margin-bottom: 30px;
+
+          .circle {
+            margin-right: 15px;
+            background-color: $orange;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: $white;
+            font-size: $text-font-size-1;
+
+          }
+        }
+
+        &-description {
+          text-align: center;
+          line-height: 1.8;
+          margin-bottom: 10px;
+        }
+        &-action {
+          background-color: $orange;
+          color: $white;
+          padding: 7px;
+          border-radius: 4px;
+          text-align: center;
+          display: flex;
+          font-size: 14px;
+          justify-content: center;
+          align-items: center;
+          height: 35px;
+          &>img {
+            margin-right: 10px;
+          }
+        }
+        &-command {
+          background-color: $dark-blue;
+          color: $white;
+          padding: 7px;
+          font-size: 12px;
+          border-radius: 4px;
+          height: 35px;
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+        &-hint {
+          color: $orange;
+          margin-top: 30px;
+          font-size: 14px;
+        }
+
+        &-downloads {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          margin-top: 20px;
+
+          .download-item {
+            display: flex;
+            font-size: 14px;
+            color: $orange;
+            img {
+              margin-right: 10px;
+            }
+          }
+        }
+
+      }
+    }
+
   }
 }
