--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-{% include header-page.html %}
+{% include header.html %}
+{% include breadcrumbs.html %}
 <!-- Page Section -->
 <section class="site-section blog-section page-layout no-sidebar" id="start">
   <div class="container">
