--- a/css/style.css
+++ b/css/style.css
@@ -2940,7 +2940,11 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul {
           justify-content: space-between;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.subnav > a.nav-link {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item > .nav-link {
+  color: #f15d2f;
+}
+
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.subnav > .nav-link {
   overflow: hidden;
   height: 6.5rem;
   display: -webkit-box;
@@ -2951,6 +2955,7 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.subna
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.subnav:hover > .subnav-content {
@@ -2995,7 +3000,7 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .su
   content: '';
   position: absolute;
   height: 2px;
-  background-color: #f15c2e;
+  background-color: #f15d2f;
   bottom: 0;
   width: 100%;
 }
@@ -3004,20 +3009,29 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .su
   color: #f15d2f;
 }
 
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .subnav-content .container > .current-menu-item > a::before {
+  content: '';
+  position: absolute;
+  height: 2px;
+  background-color: #f15c2e;
+  bottom: 0;
+  width: 100%;
+}
+
 header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li:last-child {
   margin-right: 0;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item a {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item .nav-link {
   color: #F15C2E;
   position: relative;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item a.button {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.current-menu-item .nav-link.button {
   color: #fff;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li .nav-link {
   display: block;
   color: #fff;
   padding: 10px 0;
@@ -3025,11 +3039,11 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav
   text-transform: initial;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link:hover, header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link:active {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li .nav-link:hover, header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li .nav-link:active {
   color: #F15C2E;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link i {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li .nav-link i {
   font-size: 1.5rem;
 }
 
