--- a/css/style.css
+++ b/css/style.css
@@ -2221,6 +2221,22 @@ Creation date: 06/02/2020 15:13
   content: "";
 }
 
+.fa-raspberry-pi:before {
+  content: "";
+}
+
+.fa-windows:before {
+  content: "";
+}
+
+.fa-apple:before {
+  content: "";
+}
+
+.fa-linux:before {
+  content: "";
+}
+
 .fab:before {
   display: inline-block;
   font-family: "Font Awesome 5 Brands";
@@ -6312,8 +6328,9 @@ section.download-section .download .download-choices .choice-action {
   height: 35px;
 }
 
-section.download-section .download .download-choices .choice-action > img {
-  margin-right: 10px;
+section.download-section .download .download-choices .choice-action i {
+  font-size: 18px;
+  margin-right: 5px;
 }
 
 section.download-section .download .download-choices .choice-command {
@@ -6361,17 +6378,23 @@ section.download-section .download .download-choices .choice-downloads {
 }
 
 section.download-section .download .download-choices .choice-downloads .download-item {
+  font-size: 14px;
+  color: #f15d2f;
+  line-height: 1.5;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  font-size: 14px;
-  color: #f15d2f;
-  line-height: 1.5;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 7px;
 }
 
-section.download-section .download .download-choices .choice-downloads .download-item img {
-  margin-right: 10px;
+section.download-section .download .download-choices .choice-downloads .download-item i {
+  font-size: 18px;
+  margin-right: 5px;
 }
 
 /**
