--- a/_scss/layout/_global.scss
+++ b/_scss/layout/_global.scss
@@ -56,7 +56,7 @@ body {
     height: 100vh;
     overflow-y: hidden;
 
-    .site-header .container {
+    .site-header>.container {
       &:before {
         width: auto;
         height: auto;
